Bug 166230 - Cannot switch off page number in paragraph/text flow dialog
Summary: Cannot switch off page number in paragraph/text flow dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Paragraph-Dialog
  Show dependency treegraph
 
Reported: 2025-04-17 14:45 UTC by Oliver Specht (CIB)
Modified: 2025-04-23 16:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2025-04-17 14:45:22 UTC
Insert a page break with page style and page number in Writer.
Reopen the paragraph dialog and switch off the "Page number" CheckBox and close the dialog.
Open the dialog again: the "Page number" CheckBox is still active
Comment 1 Commit Notification 2025-04-23 13:50:37 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ea60a38f8bd10c454cda06cee3a777e2ef402cc

tdf#166230 Switch off page number of page breaks

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.