tdf#166230 Switch off page number of page breaks

Makes is possible to switch off the page number of page breaks
in paragraph dialog.

Change-Id: Ic185e492080630ffd9906492e0a00e7d8b87d028
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184336
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>